# remote-behave-steps

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
api/: redocly.yaml
api/examples/ecommerce/: example.feature  openapi.yaml
api/examples/messaging/: example.feature  openapi.yaml
api/examples/todo-app/: example.feature  openapi.yaml
api/schemas/v1/: hooks.yaml  request.yaml  response.yaml
package/: Makefile  README.md  pyproject.toml
package/src/remote_behave_steps/: __init__.py  auto.py  cache.py  client.py  config.py  context_builder.py  discovery.py
package/tests/: conftest.py  test_example_full.py  test_example_project.py  test_example_simple.py  test_integration.py
package/tests/example_full/features/: catalog.feature  environment.py  errors.feature
package/tests/example_full/features/steps/: remote.py  verify_steps.py
package/tests/example_full/server/: Dockerfile  app.py
package/tests/example_project/: Makefile  README.md  pyproject.toml
package/tests/example_project/features/: todo.feature
package/tests/example_project/server/: app.py
package/tests/example_simple/: README.md
package/tests/example_simple/features/: environment.py  todo.feature
package/tests/example_simple/features/steps/: remote.py  verify_steps.py
package/tests/example_simple/server/: app.py
package/tests/features/: environment.py  todo.feature
package/tests/features/steps/: local_steps.py  remote.py
package/tests/server/: app.py
