[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remote-behave-steps"
version = "0.1.0"
description = "Distributed BDD testing with Python Behave via remote step providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Chris Trahey"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
]
keywords = ["behave", "bdd", "testing", "distributed", "microservices", "openapi"]
dependencies = [
    "behave>=1.2.6",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ctrahey/remote-behave-steps"
Repository = "https://github.com/ctrahey/remote-behave-steps"
Issues = "https://github.com/ctrahey/remote-behave-steps/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/remote_behave_steps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=remote_behave_steps --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["remote_behave_steps"]
parallel = true

[tool.coverage.paths]
source = [
    "src/remote_behave_steps",
    "**/site-packages/remote_behave_steps",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# Example configuration for remote_behave_steps consumers:
# [tool.remote_behave_steps]
# cache_ttl = 300
#
# [[tool.remote_behave_steps.servers]]
# name = "todo-service"
# url = "http://localhost:8080/openapi.yaml"
